Main section wit the introduction done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="stylesheet" href="./styles/tablet.css" media="(min-width: 720px)">
+    <link rel="stylesheet" href="./styles/tablet.css" media="(min-width: 680px)">
     <link rel="stylesheet" href="./styles/desktop.css" media="(min-width: 1020px)">
 </head>
 <body>
@@ -35,6 +35,64 @@
         </nav>
     </header>
     <main class="main">
+        <section class="presentation">
+            <article class="presentation__introduction">
+                <span class="presentation__title">Hi! I am</span>
+                <span class="presentation__title">Devi Moore,   </span>
+                <span class="presentation__title">Web Developer.</span>
+                <p class="presentation__description">Creating Websites and Mobile Applications for over a <strong>decade</strong>.</p>
+                <div class="presentation__cta">
+                    <a href="">
+                        <div class="presentation__anchor-text presentation__anchor-text_purple">
+                            <span>Hire Me</span>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="presentation__anchor-text presentation__anchor-text_white">
+                            <span>Projects</span><span class="presentation__arrow-up-icon"></span>
+                        </div>
+                    </a>
+                </div>
+                <div class="presentation_skills">
+                    <div class="presentation__data">
+                        <span class="presentation__amount">
+                            +128
+                        </span>
+                        <span class="presentation__info">
+                            Clients and companies
+                        </span>
+                    </div>
+                    <div class="presentation__data">
+                        <span class="presentation__amount">
+                            256
+                        </span>
+                        <span class="presentation__info">
+                            Projects completed
+                        </span>
+                    </div>
+                    <div class="presentation__data">
+                        <span class="presentation__amount">
+                            12
+                        </span>
+                        <span class="presentation__info">
+                            international awards as Developer
+                        </span>
+                    </div>
+                </div>
+
+            </article>
+
+            <article class="presentation__image">
+                <div class="presentation__img">
+                </div>
+                <div class="presentation__form">
+                    <form action="" class="newsletter-form">
+                        <input type="email" placeholder="Subscribe my Newsletter">
+                        <button type="submit"><span class="newsletter-form__icon"></span></button>
+                    </form>
+                </div>
+            </article>
+        </section>
     </main>
     <footer class="footer">
 
