--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             12
                         </span>
                         <span class="presentation__info">
-                            international awards as Developer
+                            International awards as Developer
                         </span>
                     </div>
                 </div>
@@ -93,6 +93,48 @@
                 </div>
             </article>
         </section>
+        <section class="cards">
+            <div class="cards__title">
+                <span>What I do</span>
+            </div>
+            <div class="cards__elements">
+                <div class="cards__card">
+                    <div class="card__logo">
+                        <span class="card__logo_mobile"></span>
+                    </div>
+                    <div class="card__title">
+                        <h2>Mobile Development</h2>
+                    </div>
+                    <div class="card__description">
+                        <p>Delivering tailored mobile app solutions to businesses and individuals, utilizing the latest technologies and user-focused design.</p>
+                    </div>
+                </div>
+                <div class="cards__card">
+                    <div class="card__logo">
+                        <span class="card__logo_e-commerce"></span>
+                    </div>
+                    <div class="card__title">
+                        <h2>E-commerce Creation</h2>
+                    </div>
+                    <div class="card__description">
+                        <p>E-commerce development services to help businesses create, launch, and maintain their online stores with ease.</p>
+                    </div>
+                </div>
+                <div class="cards__card">
+                    <div class="card__logo">
+                        <span class="card__logo_terminal"></span>
+                    </div>
+                    <div class="card__title">
+                        <h2>Server Solutions</h2>
+                    </div>
+                    <div class="card__description">
+                        <p>Specializing in freelance server-side development services, delivering robust and scalable solutions to meet clients' unique needs.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        
     </main>
     <footer class="footer">
 
