Portfolio main section finished

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
             </article>
         </section>
-        <section class="cards">
+        <section class="cards" id="whatIDo">
             <div class="cards__title">
                 <span>What I do</span>
             </div>
@@ -129,6 +129,52 @@
                     </div>
                     <div class="card__description">
                         <p>Specializing in freelance server-side development services, delivering robust and scalable solutions to meet clients' unique needs.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="cards" id="portfolio">
+            <div class="cards__title">
+                <span>Portfolio</span>
+            </div>
+            <div class="cards__elements">
+                <div class="cards__card">
+                    <div class="card__image">
+                        <div class="card__image_portfolio-1">
+
+                        </div>
+                    </div>
+                    <div class="card__title">
+                        <h2>Website</h2>
+                    </div>
+                    <div class="card__description">
+                        <p>Website utilizing HTML, CSS, and Laravel technologies. The project showcases a sleek and modern design, with a robust back-end system for easy management and scalability.</p>
+                    </div>
+                </div>
+                <div class="cards__card">
+                    <div class="card__image">
+                        <div class="card__image_portfolio-2">
+
+                        </div>
+                    </div>
+                    <div class="card__title">
+                        <h2>Single Page Application</h2>
+                    </div>
+                    <div class="card__description">
+                        <p>This application featuring HTML, CSS, Vue.js, and JavaScript technologies. The app offers a seamless and responsive user experience, with dynamic functionality and modern design elements.</p>
+                    </div>
+                </div>
+                <div class="cards__card">
+                    <div class="card__image">
+                        <div class="card__image_portfolio-3">
+
+                        </div>
+                    </div>
+                    <div class="card__title">
+                        <h2>Blog Site</h2>
+                    </div>
+                    <div class="card__description">
+                        <p>Utilizes HTML, CSS, Vue.js, TypeScript, and Laravel technologies. The site has a responsive design, intuitive navigation, and robust features, allowing for seamless content management and dynamic user engagement.</p>
                     </div>
                 </div>
             </div>
