Testimonials main section finished

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="navigation__item"><a href="#home">Home</a></li>
                 <li class="navigation__item"><a href="#whatIDo">What I Do</a></li>
                 <li class="navigation__item"><a href="#portfolio">Portfolio</a></li>
-                <li class="navigation__item"><a href="#portfolio">Testimonial</a></li>
+                <li class="navigation__item"><a href="#testimonials">Testimonials</a></li>
                 <li class="navigation__item"><a href="#contact">Contact</a></li>
             </ul>
             <div class="navigation__button">
@@ -179,7 +179,67 @@
                 </div>
             </div>
         </section>
-        
+        <section class="cards" id="testimonials">
+            <div class="cards__title">
+                <span>Testimonials</span>
+            </div>
+            <div class="cards__elements">
+                <div class="cards__card">
+                    <div class="card__testimonial">
+                        <div class="card__image">
+                            <span class="card__image_testimonial-1"></span>
+                        </div>
+                        <div class="card__info">
+                            <div class="card__name">
+                                <h2>Francis Walsh</h2>
+                            </div>
+                            <div class="card__position">
+                                <span>CEO Lately.io</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card__description">
+                        <p>I highly recommend Devi for their exceptional work and professionalism. Their skills and expertise were a valuable asset to our project, and I look forward to working with them again in the future.</p>
+                    </div>
+                </div>
+                <div class="cards__card">
+                    <div class="card__testimonial">
+                        <div class="card__image">
+                            <span class="card__image_testimonial-2"></span>
+                        </div>
+                        <div class="card__info">
+                            <div class="card__name">
+                                <h2>Emily Chen</h2>
+                            </div>
+                            <div class="card__position">
+                                <span>Owner InnovateWorks</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card__description">
+                        <p>Devi is a true professional who exceeded my expectations. Their expertise and dedication to their craft helped take my business to the next level. I highly recommend them for any project.</p>
+                    </div>
+                </div>
+                <div class="cards__card">
+                    <div class="card__testimonial">
+                        <div class="card__image">
+                            <span class="card__image_testimonial-3"></span>
+                        </div>
+                        <div class="card__info">
+                            <div class="card__name">
+                                <h2>Rachel Nguyen</h2>
+                            </div>
+                            <div class="card__position">
+                                <span>PM at NextCore Corp.</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card__description">
+                        <p>I had the pleasure of working with Devi on a recent project and was thoroughly impressed. Their professionalism, attention to detail, and ability to deliver quality work on time made them an invaluable asset to our team.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         
     </main>
     <footer class="footer">
