--- a/index.html
+++ b/index.html
@@ -240,6 +240,33 @@
                 </div>
             </div>
         </section>
+        <section class="contact" id="contact">
+            <div class="contact__title">
+                <span>Get in touch</span>
+            </div>
+
+            <div class="contact__body">
+                <p class="contact__phrase">
+                    ""Networking is overrated. Become first and foremost a person of value and the network will be available whenever you need it."" <br>
+                    - <b>Naval Ravikant</b> 
+                </p>
+                <form action="" class="contact__form">
+                    <label for="" class="contact__subtitle">
+                        <span>Name</span>
+                        <input type="text" required>
+                    </label>
+                    <label for="" class="contact__subtitle">
+                        <span>Email</span>
+                        <input type="email" name="" id="" required>
+                    </label>
+                    <label for="" class="contact__subtitle">
+                        <span>Message</span>
+                        <textarea name="" id="" cols="30" rows="10" required></textarea>
+                    </label>
+                    <button class="contact__submit" type="submit">Send</button>
+                </form>
+            </div>
+        </section>
         
     </main>
     <footer class="footer">
