--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="presentation_skills">
+                <div class="presentation__skills">
                     <div class="presentation__data">
                         <span class="presentation__amount">
                             +128
@@ -270,7 +270,17 @@
         
     </main>
     <footer class="footer">
-
+        <div class="footer__information">
+            <div class="footer__social">
+                <div class="footer__logo">
+                    <label class="footer__logo_text">Devi<span class="footer__logo_point">.</span></label>
+                </div>
+                <ul>
+                    <li><span class="info__logo_location"></span><a href="https://www.google.com/maps/place/Singapore+238896/@1.300934,103.840008,15z/data=!3m1!4b1!4m6!3m5!1s0x31da1996d80beb1f:0x45779e3563e6bcda!8m2!3d1.300934!4d103.840008!16s%2Fg%2F1v_vqfk8?entry=ttu" target="_blank" rel="noopener noreferrer">Singapore, 238896</a></li>
+                    <li><span class="info__logo_number"></span>(+65) 7362 5896</li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
